--- a/superhero_project/superheros/templates/superheros/edit.html
+++ b/superhero_project/superheros/templates/superheros/edit.html
@@ -9,7 +9,7 @@
 <body>
     <form action= "{% url 'superheros:edit' %}" method = "post">
         {% csrf_token %}
-        Name: <input type="text" name="name" id="name"><br/>
+        Name: <input type="text" name="name" id="name"> {{single_hero.name}} <br/>
         Alter Ego: <input type="text" name="alter_ego" id="alter_ego"><br/>
         Primary Ability: <input type="text" name="primary" id="primary"><br/>
         Secondary Ability: <input type="text" name="secondary" id="secondary"><br/>
